nginx_k3s_config/ingress_controller_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller-loadbalancer
  namespace: ingress-nginx
spec:
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
      nodePort: 30443
  type: NodePort
